--- a/index.html
+++ b/index.html
@@ -4,36 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/fullpage.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <!-- main -S -->
+    <link rel="stylesheet" href="css/index.css">
+    <!-- main -E -->
+    <!-- fullpage -S -->
+    <link rel="stylesheet" href="css/fullpage.css">
+    <!-- fullpage -E -->
+    <!-- swiper -S -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
+    <!-- swiper -E -->    
+    <title>노르웨이숲</title>
 </head>
 <body>
     <header>
-        <div>hihihi</div>
+        <h1 class="hidden"></h1>
+        <nav>h1</nav>
     </header>
     <main id="fullpage">
         <div class="section active" id="section1">
-            <div class="slide">
-                <h1>Section 1</h1>
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide slide1">Slide 1</div>
+                  <div class="swiper-slide slide2">Slide 2</div>
+                  <div class="swiper-slide slide3">Slide 3</div>
+                </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div> 
+                <div class="autoplay-progress">
+                    <svg viewBox="0 0 48 48">
+                      <circle cx="24" cy="24" r="20"></circle>
+                    </svg>
+                    <span></span>
+                </div>               
             </div>
         </div>
         <div class="section" id="section2">
-            <div class="intro">
-                <h1>Section 2</h1>
-            </div>
+            <h1>Section 2</h1>
         </div>
         <div class="section" id="section3">
-            <div class="intro">
-                <h1>Section 3</h1>
-            </div>
+            <h1>Section 3</h1>
         </div>
         <div class="section" id="section4">
-            <div class="intro">
-                <h1>Section 4</h1>
-            </div>
+            <h1>Section 4</h1>
+        </div>
+        <div class="section" id="section5">
+            <h1>Section 5</h1>
         </div>
     </main>
+    <!-- fullpage -S -->
     <script src="js/fullpage.js"></script>
     <script src="js/index.js"></script>
+    <!-- fullpage -E -->
+    <!-- swiper -S -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <!-- swiper -E -->
+    <script src="js/swiper.js"></script>
 </body>
 </html>
